force-app/main/default/objects/ARM_Object_Mapping__c/ARM_Object_Mapping__c.object-meta.xml
<CustomObject>
    <label>ARM Object Mapping</label>
    <pluralLabel>ARM Object Mappings</pluralLabel>
    <description>Stores the mapping definition between a source CPQ object and a target ARM object. Used by MigrationValidator to resolve field-level transformation rules during migration.</description>
    <nameField>
        <label>Mapping Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>