force-app/main/default/objects/ARM_Object_Mapping__c/fields/Mapping_Logic__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Logic__c</fullName>
    <label>Mapping Logic</label>
    <description>JSON-serialized field-to-field transformation rules for this object mapping. Structure: [{sourceField, targetField, transformType}]. Consumed by DataTransformBatch.execute() to drive per-record field assignment.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>