force-app/main/default/objects/ARM_Object_Mapping__c/fields/Source_Object__c.field-meta.xml
<CustomField>
    <fullName>Source_Object__c</fullName>
    <label>Source Object</label>
    <description>API name of the source CPQ sObject (e.g., SBQQ__Quote__c). Used by MigrationValidator to verify field accessibility before transformation begins.</description>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>