force-app/main/default/objects/ARM_Object_Mapping__c/fields/Target_Object__c.field-meta.xml
<CustomField>
    <fullName>Target_Object__c</fullName>
    <label>Target Object</label>
    <description>API name of the target ARM sObject (e.g., arm__Quote__c). Used by MigrationValidator to verify write access before the transformation batch executes.</description>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>